# specterext-spa

./: .gitignore  MANIFEST.in  Readme.md  config-overrides.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
public/: index.html
react/: App.js  Todo.js  TodoList.js
src/swan/specterext/spa/: __main__.py  app_config.py  config.py  controller.py  service.py
src/swan/specterext/spa/templates/spa/: base.jinja  index.jinja  index_orig.jinja  index_with_nav.jinja  settings.jinja  transactions.jinja
src/swan/specterext/spa/templates/spa/app/: App.js
src/swan/specterext/spa/templates/spa/components/: spa_menu.jinja  spa_tab.jinja
tests/: fix_devices_and_wallets.py
